--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "Justin Palmer",
   "scripts": {
     "transpile": "babel --presets latest -o js/app.compiled.js js/app.js",
-    "watch": "babel --presets latest --watch -o js/app.compiled.js js/app.js",
-    "start": "python -m http.server 8000"
+    "watch": "babel --presets latest --watch -d public/js js",
+    "start": "cd public && python -m http.server 8000"
   },
   "dependencies": {
     "d3": "4"
