--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "ndjson-cli": "^0.3.0",
     "shapefile": "^0.5.9",
     "topojson": "^2.2.0",
-    "jsts": "^1.3.0"
+    "jsts": "^1.3.0",
+    "commander": "^2.9.0"    
+  },
+  "dependencies": {
   }
 }
