--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "demshade",
   "author": "Justin Palmer",
-  "scripts": {
-  },
+  "scripts": {},
   "devDependencies": {
+    "@turf/buffer": "^3.7.0",
+    "@turf/envelope": "^3.7.0",
+    "@turf/intersect": "^3.7.0",
+    "commander": "^2.9.0",
     "d3": "4",
     "d3-geo-projection": "^1.2.1",
     "ndjson-cli": "^0.3.0",
     "shapefile": "^0.5.9",
-    "topojson": "^2.2.0",
-    "jsts": "^1.3.0",
-    "commander": "^2.9.0"    
+    "topojson": "^2.2.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
